<resources>
    <string name="app_name">SportFuture</string>

    <string name="navigation_drawer_open">Abrir pesta&#xf1;a de navegaci&#xf3;n</string>
    <string name="navigation_drawer_close">Cerrar pesta&#xf1;a de navegaci&#xf3;n</string>

    <string name="action_settings">Ajustes</string>
    <string name="home">Inicio</string>
    <string name="settings">Ajustes</string>
    <string name="help">Ayuda</string>

    <string name="hello_fragment_help">Fragment Help</string>

    <string name="action_scan">Escanear</string>
    <string name="menu_connect">Conectado</string>
    <string name="menu_disconnect">Desconectado</string>
    <string name="menu_stop">Parar</string>
    <string name="menu_scan">Escanear</string>
    <string name="radButMed">Medio</string>
    <string name="radButLow">Bajo</string>
    <string name="radButHigh">Alto</string>
    <string name="radGroupText">Elige el nivel de monitorización</string>
    <string name="nav_header_text1">Sport@Future</string>
    <string name="nav_header_text2">Aitex</string>
    <string name="nav_header_content_description">App Icon</string>
    <string name="settings_nivelBajo">Riesgo Bajo &lt; 15&#176; \nRiesgo medio 15&#176; - 30&#176; \nRiesgo algo &gt; 30&#176;</string>
    <string name="settings_nivelMedio">Riesgo Bajo &lt; 10&#176; \nRiesgo medio 10º&#176; - 20&#176; \nRiesgo algo &gt; 20&#176;</string>
    <string name="settings_nivelAlto">Riesgo Bajo &lt; 5&#176; \nRiesgo medio 5&#176; - 10&#176; \nRiesgo algo &gt; 10&#176;</string>
    <string name="MainActivity">Inicio</string>
    <string name="helpTextAddr">Plaza Emilio Sala, 1\nE- 03801 Alcoy (Alicante)</string>
    <string name="helpTextPhone">Tel: +34 96 554 22 00</string>
    <string name="helpTextEmail">e-mail: info@aitex.es</string>
    <string name="helpTextWeb">www.aitex.es</string>
    <string name="help_frag_content_description">Logo Aitex</string>
</resources>
