<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.upv.olcra.sportfuture.SettingsFragment">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/radioGroupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radGroupText"
            />
        <RadioButton
            android:id="@+id/radioButtonLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radButLow"/>
        <RadioButton
            android:id="@+id/radioButtonMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radButMed" />
        <RadioButton
            android:id="@+id/radioButtonHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radButHigh" />
    </RadioGroup>
</FrameLayout>
