<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.upv.olcra.sportfuture.FragmentHelp">

    <ImageView
        android:id="@+id/helpImAitex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:contentDescription="@string/help_frag_content_description"
        android:src="@drawable/logo_transparente" />

    <TextView
        android:id="@+id/helpTextAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/helpImAitex"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/helpTextAddr"/>
    <TextView
        android:id="@+id/helpTextWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/helpTextAddr"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/helpTextWeb"
        android:autoLink="web"/>
    <TextView
        android:id="@+id/helpTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/helpTextWeb"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/helpTextPhone"
        android:autoLink="phone" />
    <TextView
        android:id="@+id/helpTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/helpTextPhone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/helpTextEmail"
        android:autoLink="email"/>



</RelativeLayout>
